<resources>
    <string name="app_name">Style Storm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="laundry">Laundry</string>
    <string name="settings">Settings</string>
    <string name="welcome_message">Style Storm</string>
    <string name="text_suggestion">We suggest to wear this item</string>
    <string name="emptySpace">%d\" \"</string>
    <string name="messageError">Something went wrong,try again please</string>
    <string name="network_error">Network Error Or City Not Found !</string>
    <string name="style_storm">Style Storm</string>
    <string name="text_empty">No clothes Found , Go to Laundry to clean your clothes</string>
    <string name="text_cleaned">Good Job , All clothes is cleaned</string>
    <string name="washing_now">Cleaning Clothes now....</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="update_location">Update Location</string>
    <string name="theme">Theme</string>
    <string name="city_or_country_name">City or Country Name</string>
    <string name="current_location">Current Location</string>
    <string name="cairo">Cairo</string>
    <string name="emptyValidation">Location can\'t be empty</string>
    <string name="updatedLocation">Location Updated Successfully</string>
    <string name="laundry_description">Laundry is the place where you clean your clothes</string>
    <string name="dirty_clothes">Dirty Clothes</string>
</resources>